css/style.css
/* ... */
.home .options a div, .home .options a span{display: block;float: left;width: 100%;height: auto;}
.home .options a span{margin-top: 20px;}




.content_wrapper .section_body{display: block;float: left;width: 100%;}

/*About Section*/
.content_wrapper .about{display: block; height: 720px;width: 100%;}
.content_wrapper .about .about_cutout{display: block;float: left;/*background:url(../img/Final_backgrounds/About-Holder.png) no-repeat center 0/100%;*/ width: 62%;height: 100%;position: relative;left: 0; padding: 200px 100px 70px;}
.content_wrapper .about .about_cutout h2{display:block;float: left;font-size: 3em;color: #FF00C3;width: 100%;margin-bottom: 20px;font-family: 'Gotham';}
.content_wrapper .about .about_cutout p{display:block;/*float: left;*/font-size: 1em;line-height: 1.6em;color: #999;width: 45%;margin-bottom: 20px;text-align: justify;}

.content_wrapper .about {
  background:url(../img/Final_backgrounds/BG-About.jpg) no-repeat center top/100%;
  background-size: cover;
}

.content_wrapper .about .about_cutout {
  position: relative;
  width: 100%;
}

.about-content {
  z-index: 10;
  position: relative;
}

.content_wrapper .about .about_cutout .bg-holder {
  position: absolute;
  top: 0;
  left: 0;
  white-space: nowrap;
  height: 720px;
  width: 100%;
}

.content_wrapper .about img {
  /*float: left;*/
  position: absolute;
  /*height: 720px;*/
  display: inline-block;
}

.content_wrapper .about .about-img-1 {
  position: absolute;
  left: 0;
  width: 60%;
  bottom: 0;
}


.content_wrapper .about .about-img-2 {
  position: absolute;
  right: 0;
  top: 719px;
  width: 40%;
}


/*Schedule Section css*/
.content_wrapper .schdl{display: block;width: 100%;overflow: hidden;}

.content_wrapper .schdl {
  background:url(../img/Final_backgrounds/BG-Schedule.jpg) no-repeat center top/100%;
  background-size: cover; 
}

.content_wrapper .schdl .schdl_cutout1{display: block;float: right;/*background:url(../img/Final_backgrounds/Schedule-Holder.png) no-repeat center top/100%;*/ width: 38%;position: relative;top: 0;right: 0;padding: 315px 73px 0 100px;}
.content_wrapper .schdl .schdl_cutout2{position: relative;}

.day2-cutout-img {
  position: absolute;
  top: 0;
  left: -99px;
  height: 840px;
}

.content_wrapper .schdl .schdl_cutout1 h2{display:block;float: left;font-size: 3em;color: #FFFFFF;width: 100%;text-align: right;font-family: 'Gotham';}
.content_wrapper .schdl .day1{display: block;padding: 100px 0 220px 100px;}
.content_wrapper .schdl .day1 h3{display: block;font-family: 'Gotham';font-size:3em;color: #FF00C3;width: 100%;margin-bottom: 40px;}
.content_wrapper .schdl .schdl_cutout2 .day2{display: block;width: 100%;position: relative;color: #141414;padding: 120px 0 60px 100px; z-index: 10;}
.content_wrapper .schdl .schdl_cutout2 .day2 h3{display: block;float: left;font-family: 'Gotham';font-size:3em;color: #141414;width: 100%;margin-bottom: 40px;}
.content_wrapper .schdl .download_schedule{display: block;float: right;position: relative;top: -170px;width: 280px;text-align: center;margin-right: 70px;}
.content_wrapper .schdl .download_schedule a{font-size: 1.4em;display: block;float: right;width: 100%;padding: 10px;border: 1px solid;border-style: dashed;line-height: 1.4em;border-radius: 8px;color:rgba(255,255,255, 0.7);cursor: pointer;}
.content_wrapper .schdl .download_schedule a:hover{color:rgba(255,255,255, 0.88);}
.content_wrapper .schdl .sub_hd .left{font-size: 2em;font-weight: bold;}
.content_wrapper .schdl .sub_hd .sep{font-size: 2em;font-weight: bold;padding: 0 6px;}
.content_wrapper .schdl .day1 .event_ls .low{font-style: italic;color:rgba(255,255,255, 0.7);}
.content_wrapper .schdl .day2 .event_ls .low{font-style: italic;color:rgba(0,0,0, 0.7);}
.content_wrapper .schdl .day1 .sub_hd, .content_wrapper .schdl .day1 .event_ls .time{color: #00FFE2;}
.content_wrapper .schdl .day2 .sub_hd, .content_wrapper .schdl .day2 .event_ls .time{color: #FF00C3;}
.content_wrapper .schdl .day1 .schdl_cnt, .content_wrapper .schdl .day2 .schdl_cnt{margin-bottom: 30px;}
.content_wrapper .schdl .day1 .sub_hd, .content_wrapper .schdl .day2 .sub_hd{margin-bottom: 20px;}
.content_wrapper .schdl .day1 .event_ls .time, .content_wrapper .schdl .day2 .event_ls .time{margin-right: 20px;}
.content_wrapper .schdl .day1 .event_ls .high, .content_wrapper .schdl .day2 .event_ls .high{margin-right: 10px;display: inline-block;}
.content_wrapper .schdl .day1 .event_ls, .content_wrapper .schdl .day2 .event_ls{line-height: 1.4em;}
.content_wrapper .schdl .event_ls .lab{width: 135px;}
.content_wrapper .schdl .event_ls .tlk{width: 95px;}
.content_wrapper .schdl .event_ls .evt{width: 158px;}



/*
.content_wrapper .schdl .section_icon{display: block;float: left;width: 15%;height: auto;}
.content_wrapper .schdl .section_icon .ico{display: block;float: left;width: 100%;height: 100%;}*/

/*Speakers Section css*/
.content_wrapper .speakers{display: block;float: left;height: 1440px;width: 100%;}
.content_wrapper .speakers {
  background:url(../img/Final_backgrounds/BG-dTalks.jpg) no-repeat center top/100%;
  background-size: cover; 
}
.content_wrapper .speakers .speaker_cutout{display: block;float: left; width: 47%;height: 100%;position: relative;left: 0;padding: 380px 0 0 170px;}

.speaker-cutout-img {
  position: absolute;
  top: 0;
  left: -1257px;
  
}

.content_wrapper .speakers .speaker_cutout h2{display:block;float: left;font-size: 3em;color: #00FFE2;width: 100%;font-family: 'Gotham';position: relative;z-index: 20;}
.content_wrapper .speakers .first_row, .content_wrapper .speakers .second_row{display: block;float: right;margin-top: 160px;position: relative;top: -1440px;}
.content_wrapper .speakers .first_row{width: 60%;}



.content_wrapper .speakers .second_row{width: 60%;}
/* ... */

